--- a/app/templates/final_project.html
+++ b/app/templates/final_project.html
@@ -27,15 +27,7 @@
 
   <!-- Custom JS -->
   <script src="/static/js/chart_config.js"></script>
-  <script src="/static/js/le_global.js"></script>
-  <script src="/static/js/le_error.js"></script>
-  <script src="/static/js/finalbox.js"></script>
-  <script src="/static/js/le_spider.js"></script>
-  <script src="/static/js/finalscatter.js"></script>
-  <script src="/static/js/finalstackedbar.js"></script>
-  <script src="/static/js/le_bubble.js"></script>
-  <script src="/static/js/le_violin.js"></script>
-  <script src="/static/js/finalline.js"></script>
+
 </head>
 
 <body ng-controller="FormController" layout="column">
@@ -154,6 +146,22 @@
               <svg id="box-chart"></svg>
               <div id="box-tooltip" class="chart-tooltip"></div>
             </div>
+          </div>
+
+          <div class="chart-container">
+            <div class="chart-header">
+              <h3 class="chart-title">Life Expectancy vs. Healthy Life Expectancy</h3>
+              <span class="chart-subtitle">Comparison of total and healthy life expectancy across regions (2021)</span>
+            </div>
+            <div class="info-panel">
+              <p>
+                This chart compares three key metrics across countries: total life expectancy (gray), 
+                healthy life expectancy (green), and unhealthy years (red). It highlights the countries 
+                with the highest and lowest values within each continent, revealing significant variations 
+                in not just how long people live, but how many of those years are spent in good health.
+              </p>
+            </div>
+            <div id="alluvial-chart" class="chart-content"></div>
           </div>
         </md-card-content>
       </md-card>
@@ -357,11 +365,20 @@
     </section>
 
   </md-content>
-
+  <script src="/static/js/le_global.js"></script>
+  <script src="/static/js/le_error.js"></script>
+  <script src="/static/js/finalbox.js"></script>
+  <script src="/static/js/le_spider.js"></script>
+  <script src="/static/js/finalscatter.js"></script>
+  <script src="/static/js/finalstackedbar.js"></script>
+  <script src="/static/js/le_bubble.js"></script>
+  <script src="/static/js/le_violin.js"></script>
+  <script src="/static/js/finalline.js"></script>
   <script src="/static/js/finalbubble.js"></script>
   <script src="/static/js/finalslope.js"></script>
   <script src="/static/js/finalchoropleth.js"></script>
   <script src="/static/js/finalheatmap.js"></script>
+  <script src="/static/js/finalalluvial.js"></script>
   
 </body>
 
