change the link of final

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -90,7 +90,7 @@
       interactive dashboard that explores climate data, CO2 emissions, temperature trends, and more.
       Dive in to explore comprehensive data and uncover trends.
     </p>
-    <button class="final-project-btn" onclick="window.location.href='/finalstackedbar'">Explore the Final Project</button>
+    <button class="final-project-btn" onclick="window.location.href='/final'">Explore the Final Project</button>
   </section>
 </body>
 
