add line chart description

--- a/app/templates/final_project.html
+++ b/app/templates/final_project.html
@@ -349,6 +349,19 @@
                 <select id="country-select"></select>
               </div>
             </div>
+            <div class="chart-description">
+              <p>From 2000 to 2010, a steady upward trend was observed in most countries. Nations with initially lower
+                life expectancies showed incremental growth, indicating gradual improvements in factors contributing to
+                longer lifespans. By 2010, several countries had gained an additional 1 to 2 years in female life
+                expectancy, marking a period of continued progress. Between 2010 and 2019, female life expectancy
+                continued its positive trajectory, with some countries reaching their highest recorded values. In
+                contrast, countries with lower values experienced slower but steady improvements, reflecting ongoing
+                development. By 2021, while many countries maintained their upward trends, some exhibited stagnation or
+                slight declines in life expectancy. This indicates that while progress was made, there were still
+                regional differences in how life expectancy evolved.
+
+              </p>
+            </div>
 
             <div id="tooltip" class="chart-tooltip"></div>
             <svg id="line-chart" width="100%" height="500"></svg>
