--- a/app/templates/final_project.html
+++ b/app/templates/final_project.html
@@ -168,12 +168,34 @@
             <div class="chart-description">
               <p>
                 This chart compares three key metrics across countries: total life expectancy (gray),
-                healthy life expectancy (green), and unhealthy years (red). It highlights the countries
+                healthy life expectancy (green), and unhealthy years (orange). It highlights the countries
                 with the highest and lowest values within each continent, revealing significant variations
                 in not just how long people live, but how many of those years are spent in good health.
               </p>
             </div>
             <div id="alluvial-chart" class="chart-content"></div>
+          </div>
+          
+          <div class="chart-container">
+            <div class="chart-header">
+              <h3 class="chart-title">Average Healthy Life Expectancy at Age 60 (2000-2021)</h3>
+              <div class="filter-group">
+                <label for="year">Select Year:</label>
+                <select id="year"></select>
+              </div>
+            </div>
+            <div class="chart-description">
+              <p>This bar chart represents average healthy life expectancy at age 60 across different regions over time.
+                The consistent height of the bars indicates that life expectancy beyond 60 has remained relatively
+                stable, with variations among regions. Europe and the Americas have the highest life expectancy, while
+                Africa shows the lowest. This visualization highlights longevity trends and aging populations in
+                different global regions.</p>
+            </div>
+            <div id="bar-chart-container" class="chart-content">
+
+              <div width="100%" height="400" id="bar-chart"></div>
+              <div class="chart-tooltip"></div>
+            </div>
           </div>
         </md-card-content>
       </md-card>
@@ -304,27 +326,7 @@
             <div id="scatter-chart" class="chart-content"></div>
           </div>
 
-          <div class="chart-container">
-            <div class="chart-header">
-              <h3 class="chart-title">Average Healthy Life Expectancy at Age 60 (2000-2021)</h3>
-              <div class="filter-group">
-                <label for="year">Select Year:</label>
-                <select id="year"></select>
-              </div>
-            </div>
-            <div class="chart-description">
-              <p>This bar chart represents average healthy life expectancy at age 60 across different regions over time.
-                The consistent height of the bars indicates that life expectancy beyond 60 has remained relatively
-                stable, with variations among regions. Europe and the Americas have the highest life expectancy, while
-                Africa shows the lowest. This visualization highlights longevity trends and aging populations in
-                different global regions.</p>
-            </div>
-            <div id="bar-chart-container" class="chart-content">
 
-              <div width="100%" height="400" id="bar-chart"></div>
-              <div class="chart-tooltip"></div>
-            </div>
-          </div>
 
           <div class="chart-container">
             <div class="chart-header">
